<resources>
    <string name="app_name">Hotel Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="roomser">roomser</string>
    <string name="call">call</string>
    <string name="checkin">checkin</string>
    <string name="hotelinfo">hotelInfo</string>
    <string name="makereq">makereq</string>
    <string name="out">out</string>
    <string name="call_reception">Call Reception</string>
    <string name="check_in_check_out">Check In / Check out</string>
    <string name="hotel_information">Hotel Information</string>
    <string name="make_a_request">Make A Request</string>
    <string name="out_and_about">Out And About</string>
    <string name="room_service">Room Service</string>
    <string name="settings">Settings</string>
    <string name="callUs">In order to fully service our guests, the reception is open 24 hours a day.\n Feel free to call the reception if you need anything.\n You will be redirected to the phone dial.</string>
    <string name="title_activity_maps">Map</string>
    <string name="_00_123456789">+00 123456789</string>
    <string name="hotel_application_hotelapplication_com">hotel.application@hotelapplication.com</string>
    <string name="http_www_hotelapplication_com">http://www.hotelapplication.com</string>
    <string name="web">web</string>
    <string name="mail">mail</string>
    <string name="phone">phone</string>
    <string name="contact_us">Contact us</string>
    <string name="email">Email</string>
    <string name="phoneNum">Phone</string>
    <string name="website">Website</string>
    <string name="change_room">CHANGE ROOM</string>
    <string name="check_out">CHECK OUT</string>
    <string name="check_in">Check In</string>
    <string name="check_in_date">Check in Date:</string>
    <string name="room_number">Room number:</string>
    <string name="welcome">Welcome,</string>
    <string name="you_haven_t_checked_in_yet">You haven\'t checked in yet</string>
    <string name="you_are_not_checked_in">you are not checked in</string>
    <string name="checkinpicture">checkInPicture</string>
    <string name="extra_pillows">Extra Pillows</string>
    <string name="extra_towels">Extra towels</string>
    <string name="make_a_request_Header">Make a request</string>
    <string name="order">Order</string>
    <string name="refill_minibar">Refill minibar</string>
    <string name="room_number_maq">Room number:</string>


    <string-array name="available_rooms">
        <item> </item>
        <item>5</item>
        <item>10</item>
        <item>16</item>
        <item>17</item>
        <item>20</item>
        <item>44</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
</resources>
