<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_checkin"
            android:icon="@drawable/checkinout"
            android:title="@string/check_in_check_out" />
        <item
            android:id="@+id/make_request"
            android:icon="@drawable/makearequest"
            android:title="@string/make_a_request" />
        <item
            android:id="@+id/room_service"
            android:icon="@drawable/roomservice"
            android:title="@string/room_service" />
        <item
            android:id="@+id/out_and_about"
            android:icon="@drawable/outandabout"
            android:title="@string/out_and_about" />

        <item
            android:id="@+id/call_reception"
            android:title="@string/call_reception"
            android:icon="@drawable/callhotel"/>

        <item
            android:id="@+id/hotel_info"
            android:title="@string/hotel_information"
            android:icon="@drawable/hotelinfo"/>

    </group>
</menu>
