<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stellajovanovic.hotelapplication.MainMenu.MainActivity">

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:contentDescription="@string/checkin"
        android:onClick="sendToCheckIn"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton3"
        app:layout_constraintRight_toRightOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton2"
        app:srcCompat="@drawable/checkinout"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="56dp"
        android:background="@null"
        android:contentDescription="@string/makereq"
        android:onClick="sendToMakeReq"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/makearequest"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="42dp"
        android:layout_marginStart="68dp"
        android:background="@null"
        android:contentDescription="@string/roomser"
        android:onClick="sendToRoomSer"
        app:layout_constraintBottom_toTopOf="@+id/imageButton5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/roomservice"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"/>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="42dp"
        android:background="@null"
        android:contentDescription="@string/out"
        android:onClick="sendToOut"
        app:layout_constraintBottom_toTopOf="@+id/imageButton6"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton2"
        app:layout_constraintRight_toRightOf="@+id/imageButton2"
        app:srcCompat="@drawable/outandabout"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="68dp"
        android:background="@null"
        android:contentDescription="@string/call"
        android:onClick="sendToCallRec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton3"
        app:layout_constraintRight_toRightOf="@+id/imageButton3"
        app:srcCompat="@drawable/callhotel"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:contentDescription="@string/hotelinfo"
        android:onClick="sendToHotelInfo"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton4"
        app:layout_constraintRight_toRightOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="@+id/imageButton5"
        app:srcCompat="@drawable/hotelinfo"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>
</android.support.constraint.ConstraintLayout>
